# ppt_use

./: README.md  ppt_automation.py
helixcore/: .gitignore  LICENSE  README.md  pyproject.toml
helixcore/.github/workflows/: ci.yml
helixcore/agents/base/: agent.py
helixcore/agents/planner/: planner_agent.py
helixcore/algorithms/base/: __init__.py  manifest.py  service.py
helixcore/algorithms/herb_similarity/: __init__.py  manifest.yaml  service.py
helixcore/charts/helixcore/: Chart.yaml  values.yaml
helixcore/docs/: design_philosophy.md  framework-overview-cn.md  workflow-sequence.md
helixcore/docs/adr/: 0001-core-principles.md
helixcore/docs/diagrams/: sequence_overview.puml
helixcore/infrastructure/temporal/: __init__.py  workflows.py
helixcore/interfaces/proto/: task.proto
helixcore/tests/unit/: test_manifest_schema.py
